# DUNE-FEM-Navier-Stokes

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile.in  Makefile.am  configure.ac  dune.module
cmake/: cmake_config.h.in
doc/doxygen/: modules
dune/fem/nvs/: exactsolution.hh  fractionaldatawriter.hh  fractionaltimeprovider.hh  global_defines.hh  problems.hh  rhsadapter.hh  stokestraits.hh  thetascheme.hh  thetascheme_alt_split.hh  thetascheme_base.hh  thetascheme_runner.hh  thetascheme_traits.hh  weighed_function.hh
dune/fem/nvs/problems/: 2dtube.hh  cockburn.hh  common.hh  damped.hh  heat.hh  real_bvp.hh  runtime.hh  runtimefunction.hh  taylor.hh  testcase2d.hh  testcase3d.hh  testdata.hh  timedisc.hh  trivial.hh
fem/nvs/: exactsolution.hh  stokestraits.hh  thetascheme_base.hh  thetascheme_runner.hh
fem/nvs/problems/: 2dtube.hh  cockburn.hh  common.hh  damped.hh  testdata.hh  trivial.hh
grids/: .taylor.dgf.swo  cavity_2d.dgf  grid_2d.dgf.ALUgrid  oseen_testcase_01.dgf  tube.dgf  unitsquare_interval.dgf
navier/: exactsolution.hh  fractionaldatawriter.hh  fractionaltimeprovider.hh  global_defines.hh  metadata.hh  problems.hh  rhsadapter.hh  stokestraits.hh  testdata.hh  thetascheme.hh  thetascheme_alt_split.hh  thetascheme_base.hh  thetascheme_runner.hh  thetascheme_traits.hh  weighed_function.hh
navier/nonlinear/: dgoperator.hh  discretemodels.hh  models.hh  pass.hh  problem.hh  upwind.hh
navier/oseen/: inverse_operator.hh  matrix_operator.hh  oseenpass.hh
navier/problems/: 2dtube.hh  cockburn.hh  common.hh  damped.hh  heat.hh  real_bvp.hh  runtime.hh  taylor.hh  testcase2d.hh  testcase3d.hh  testdata.hh  timedisc.hh  trivial.hh
parameter/: 2D.param  cavity.param  conv_diff.param  oseen_testcase_01.param  taylor.param  tube.param  working_navier_nontrivial.param
paraview/: 4way.pvsm  instat_taylor_6way.pvsm  taylor_6way.pvsm
src/: analyticaldata.hh  conv_diff.cc  conv_diff.hh  dune_fem_navier_stokes.cc  dune_navier_stokes.cc  main.hh  oseen.cc  oseen.hh  pressure.hh  problem.hh  problems.hh  reference.param  testing.cc  testing.hh  velocity.hh
src/problems/: cockburn.hh  taylor.hh  testcase2d.hh  testcase3d.hh  timedisc.hh  trivial.hh
